www/electrified/styles.css
.cpu-bars-container {
    height: 15px;
    transform: translate(0,0);
    display: flex;
    gap: 2px;
    flex-direction: row;
    align-items: center;
}

.cpu-bar {
    height: 100%;
    transform: translate(0,0);
}

.cpu-bar-unused {
    background-color: #C8C8C8;
}

.x-grid-row-selected .cpu-bar-unused {
    background-color: #B0B0B0
}

.cpu-bar-host {
    background-color: #E7CC00FF;
}

.cpu-bar-cpu {
    background-color: #666;
    color: white;
}
/* Style B */
.bars-style-B.cpu-bars-container {
    gap: 3px;
}
.bars-style-B .cpu-bar-unused {
    outline: 1px solid #8e8a8a;
}
.bars-style-B.cpu-bars-container-no-background .cpu-bar-host, .bars-style-B.cpu-bars-container-no-background .cpu-bar-cpu {
    outline: 1px solid #8e8a8a;
}

/* Style C */
.bars-style-C .cpu-bar-host {
    background-color:#FA8000
}

/* Style D */
.bars-style-green .cpu-bar-cpu {
    background-color: #21bf4b;
}

/* Style Value bars low */
/* Style D */
.bars-style-low .cpu-bar {
    height: 3px;
}
.bars-style-low .cpu-bar-text {
    display: none;
}

@media (prefers-color-scheme: dark) {
    .cpu-bar {
        color: #f2f2f2;
    }
    .cpu-bar-unused {
        background-color: #666;
    }
    .x-grid-row-selected .cpu-bar-unused {
        background-color: #707070
    }

    .cpu-bar-host {
        background-color: #e0c651;
    }
    .cpu-bar-cpu {
        background-color: #D0D0D0;
        color: #000;
    }
}

:focus{
    /* remove ugly outline from blueprint (looks only good for blueprint components)*/
    outline:initial !important;
}

.electrifiedFormLabel {
    padding-right: 10px;
    white-space: nowrap;
}

.electrifiedDialogSpacer {
    width: 25px;
}

.utilInfoTooltip {
    display: inline-block !important;
    cursor: pointer;
}

.bp6-toast {
    max-width: 100% !important; /* remove limitation */
}

.whenLight {
    display: initial;
}
.whenDark {
    display: none;
}

@media (prefers-color-scheme: dark) {
    .whenLight {
        display: none;
    }
    .whenDark {
        display: initial;
    }
}

/*
 All hovered / seleted bars are gray (instead of blue) in electrified:
*/
@media (prefers-color-scheme: light) {
    .x-grid-item-selected, .x-column-header-selected, .x-column-header-sort-ASC, .x-column-header-sort-DESC {
        background-color: #cfcfcf !important;
    }

    .x-grid-item-over, .x-column-header-over {
        background-color: #eeeeee !important;
    }




    .x-treelist-row-over {
        background-color: #eeeeee !important;
    }

    .x-menu-header {
        background-color: #747474 !important;
    }
}

.treeRow-row-contextMenu {
    outline: 1px solid #7d7d7d;
}

.electrified_hide_while_initializing {
    opacity: 0; /* hide. Don't use visibility: hidden because it removes the auto-focus from inputs */
}

.bp6-button:disabled, .bp6-button.bp6-disabled {
    cursor: initial !important; /* The not-allowed cursor is too distracting */
}

#versioninfo-innerCt {
    /* Move it 1px down. Looks better. It's may be an optical thing with the logo in front of it*/
    position: relative;
    top: 1px;
}

/* the suspend symbol */
.x-tree-icon-custom.shutting_down:after,
.x-grid-icon-custom.shutting_down:after {
    content: "\f019";
    color: #21bf4b;
    font-size: 0.9em;
}

.x-tree-icon-custom.rebooting:after,
.x-grid-icon-custom.rebooting:after {
    content: "\f021";
    color: #21bf4b;
    font-size: 0.9em;
}

/**** Blueprint ****/
@media (prefers-color-scheme: light) {
    bp6-button:not([class*=bp6-intent-]) {
        background-color: #f5f5f5 !important;
        color: #666666 !important;
        box-shadow: inset 0 0 0 1px #d8d8d8, 0 1px 2px rgba(17, 20, 24, 0.1) !important;
    }
    .bp6-button.bp6-disabled {
        background-color: #fafafa !important;
        box-shadow: inset 0 0 0 1px #ececec, 0 1px 2px rgba(17, 20, 24, 0.1) !important;
        color: #b3b3b3 !important;
    }
}
@media (prefers-color-scheme: dark) {
    .bp6-button:not([class*=bp6-intent-]) {
        background-color: #404040 !important;
        color: #f2f2f2 !important;
        box-shadow: inset 0 0 0 1px #595959, 0 1px 2px rgba(17, 20, 24, 0.1) !important;
    }
    .bp6-button.bp6-disabled {
        background-color: #333333 !important;
        box-shadow: inset 0 0 0 1px #404040, 0 1px 2px rgba(17, 20, 24, 0.1) !important;
        color: #8c8c8c !important;
    }

    .bp6-dialog, .bp6-popover, .bp6-popover-content, .bp6-popover-popper {
        background-color: #393939 !important;
    }

    .bp6-popover .bp6-popover-arrow-fill {
        fill: #393939 !important;
    }

    .bp6-dialog-header {
        background-color: #393939;
        color: #f2f2f2;
    }
    .bp6-dialog-header .bp6-icon-large:not([class*=bp6-intent]), .bp6-dialog-header .bp6-icon:not([class*=bp6-intent]) {
        color: #9f9f9f;
    }
    .bp6-heading {
        color: #f2f2f2;
    }


    .bp6-dialog-body input, .bp6-dialog-body select, .bp6-dialog-body select:hover, .bp6-dialog-body textarea {
        background-color: #333333;
        color: #f2f2f2;
    }

    .bp6-dialog-body {
        color: #f2f2f2
    }
}


#draggable-dialog-title {
    border-bottom: 1px solid #c9C9C9;
    margin-bottom: 16px;
}

.MuiModal-backdrop {
    background-color: rgba(0, 0, 0, 0.3) !important;
}

.x-treelist-item-icon.pmx-icon {
    height: 14px;
    top: 4px
}

.x-treelist-item-text {
    margin-right: 8px;
}

